# pivot

./: .gitignore  COMPLETE_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_PHASE_2_SUMMARY.md  FINAL_STATUS.md  GITHUB_PUSH_SUCCESS.md  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  LYRA_PIVOT_ULTRA_PLAN.md  MILESTONE_1.md  MILESTONE_2.md  MONTH_7_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_PROGRESS.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_2_UPDATE.md  PROJECT_COMPLETE.md  PROJECT_FINAL_SUMMARY.md  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.sh  README.md  READY_TO_PUSH.md  docker-compose.yml
.omc/sessions/: 3e8accd3-1cf1-4b64-b720-b51cd974527e.json  70ec6bb7-2c7e-40f1-8539-bbd45f6edb1f.json
.omc/state/: agent-replay-d7f26d50-35a2-43a5-9318-3ea99b6e470c.jsonl  last-tool-error.json  subagent-tracking.json
analysis/clustering/: failure_clusterer.py
analysis/online_eval/: evaluator.py
analysis/rca/: auto_rca.py
cli/: GOAL_SYSTEM.md  goal_manager.py
console/: README.md  package.json
deployments/helm/: Chart.yaml  values.yaml
docs/: ULTRA_PLAN.md  ULTRA_PLAN_PHASE_0.md  ULTRA_PLAN_PHASE_1.md  ULTRA_PLAN_PHASE_2.md  ULTRA_PLAN_PHASE_3.md
docs/architecture/: OVERVIEW.md
docs/research/: SYNTHESIS.md
docs/rfcs/: RFC-0001-otel-extensions.md  RFC-0002-task-schema.md  RFC-0003-policy-schema.md
enterprise/audit/: audit_logger.py
enterprise/global/: multi_region.py
enterprise/sandbox/: firecracker_sandbox.py
enterprise/tenancy/: tenant_manager.py
eval/: README.md  scorers.py  task_runner.py
gateway/: README.md  go.mod
policy-pack/: README.md
policy-pack/rails/: cost_budget.rego  loop_detector.rego  pii_detector.rego  rate_limiter.rego
replay/: replay_engine.py
replay/checkpoint/: manager.py
replay/engine/: counterfactual.py
scripts/: push-phase-0.sh
sdk/java/: README.md  pom.xml
sdk/python/: README.md  pyproject.toml
sdk/python/pivot/: __init__.py  anthropic_instrumentation.py  openai_instrumentation.py
sdk/python/tests/: test_pivot.py
sdk/typescript/: README.md  package.json
storage/clickhouse/: schema.sql
(+16 files in other folders)
